zomm fix for dark mode added

--- a/asn1js/index.css
+++ b/asn1js/index.css
@@ -65,6 +65,7 @@
     --dump-hex-current-hex: #474747;
     --dump-hex-current-dlen: #00b6b6;
     --hover-bg-color: #505050;
+    --zoom-fix: 1px;
     --tree-border-color: #303030;
     --tree-outline-color: #909090;
     --tree-icon: url('tree-icon-dark.svg');
